# pen-testing

./: .gitignore  readme.md
exploits/: readme.md
exploits/2025/CVE-2025-33073/wspcoerce/: README.md  pyproject.toml
exploits/2025/CVE-2025-33073/wspcoerce/wspcoerce/: cli.py  constants.py  packets.py
study/malware/making_malware/rust-malware-dev/Dirty_Vanity/: Cargo.toml  README.md
study/malware/making_malware/rust-malware-dev/WaitingThreadHijacking/: Cargo.toml  README.md
study/malware/making_malware/rust-malware-dev/link_obfuscator/: Cargo.toml  README.md
study/malware/making_malware/rust-malware-dev/lsass_dump/: Cargo.toml
study/techniques/Framework-Botnet/: CMakeLists.txt  readme.md
study/techniques/Framework-Botnet/config/: bots.conf  system.conf
study/techniques/Framework-Botnet/docker/: Dockerfile
study/techniques/Framework-Botnet/scr/: main.cpp
study/techniques/Framework-Botnet/scr/api/: RestAPI.cpp  RestAPI.h
study/techniques/Framework-Botnet/scr/bot/: Bot.h  BotAutoScaler.cpp  BotAutoScaler.h  BotBase.h  BotNetManager.cpp  BotNetManager.h  BotScheduler.cpp  BotScheduler.h  bot.cpp  botManager.cpp  botManager.h
study/techniques/Framework-Botnet/scr/captcha/: CaptchaSolver.cpp  CaptchaSolver.h
study/techniques/Framework-Botnet/scr/cli/: CommandLineInterface.cpp  CommandLineInterface.h
study/techniques/Framework-Botnet/scr/creator/: mcreator.cpp  mcreator.h
study/techniques/Framework-Botnet/scr/database/: DatabaseManager.cpp  DatabaseManager.h
study/techniques/Framework-Botnet/scr/hub/: hub.cpp  hub.h
study/techniques/Framework-Botnet/scr/messaging/: EmailSender.cpp  EmailSender.h  FacebookSender.cpp  FacebookSender.h  InstagramSender.cpp  InstagramSender.h  MessageSender.cpp  MessageSender.h  PhishingManager.cpp  PhishingManager.h  SMSSender.cpp  SMSSender.h  TelegramSender.cpp  TelegramSender.h  TemplateLoader.cpp  TemplateLoader.h  WhatsAppSender.cpp  WhatsAppSender.h
study/techniques/Framework-Botnet/scr/monitoring/: MonitoringService.cpp  MonitoringService.h
study/techniques/Framework-Botnet/scr/network/: NetworkManager.cpp  NetworkManager.h  Socket.cpp  Socket.h
study/techniques/Framework-Botnet/scr/reporting/: ReportGenerator.cpp  ReportGenerator.h
study/techniques/Framework-Botnet/scr/security/: Authentication.cpp  Authentication.h  Encryption.cpp  Encryption.h  SecurityEnhancements.cpp  SecurityEnhancements.h
study/techniques/Framework-Botnet/scr/selfdefense/: SelfDefense.cpp  SelfDefense.h
study/techniques/Framework-Botnet/scr/spider/: NetworkSpreader.cpp  NetworkSpreader.h  USBSpreader.cpp  USBSpreader.h
study/techniques/Framework-Botnet/scr/stealth/: StealthUtils.h
study/techniques/Framework-Botnet/scr/task/: TaskExecutor.cpp  TaskExecutor.h
study/techniques/Framework-Botnet/scr/urlshortener/: URLShortener.cpp  URLShortener.h
study/techniques/Framework-Botnet/scr/userdata/: BrowserHistoryDataSource.cpp  BrowserHistoryDataSource.h  SavedPasswordsDataSource.cpp  SavedPasswordsDataSource.h  UserDataCollector.cpp  UserDataCollector.h
study/techniques/Framework-Botnet/scr/utils/: Cache.cpp  Cache.h  Config.cpp  Config.h  EncryptionUtils.cpp  EncryptionUtils.h  ErrorHandler.cpp  ErrorHandler.h  Logger.cpp  Logger.h  Metrics.cpp  Metrics.h  ThreadPool.cpp  ThreadPool.h
study/techniques/Framework-Botnet/scripts/: build.sh  deploy.sh  load_test.sh  test.sh
study/techniques/Framework-Botnet/tests/: BotManagerTest.cpp  BotTest.cpp  CommandLineinterfacetest.cpp  DataBaseManagerTest.cpp  LoadTester.cpp  MessagingTest.cpp  MonitoringServicetest.cpp  NetWorkManagerTest.cpp  ReportGeneratortTest.cpp  SecurityTest.cpp
ttps/1_Recon/password_sprayers/spearspray/: Dockerfile  README.md  patterns.txt  pyproject.toml
ttps/1_Recon/password_sprayers/spearspray/spearspray/: __init__.py  cli.py  core.py
ttps/2_Persistence/payload-gen/dispatch/: Dockerfile  README.md  dispatch-server.py  pyproject.toml  requirements.txt
ttps/2_Persistence/payload-gen/dispatch/c2_demo/: README.md  client.py  server.py
ttps/2_Persistence/payload-gen/dispatch/dispatch/: app.py  auth.py  config.py  db.py
ttps/3_C2/auxiliary/scepter-rs/scepter-server/: Cargo.toml
ttps/3_C2/cobalt_strike/cobalt-phish-gh-actions/: ansible.cfg  pyproject.toml  requirements.txt  tox.ini
ttps/3_C2/cobalt_strike/cobalt-phish-gh-actions/_services/: common_functions.sh
ttps/3_C2/cobalt_strike/cobalt-phish-gh-actions/app/: __main__.py  cli.py  configuration.py
ttps/3_C2/cobalt_strike/cobalt-phish-gh-actions/tests/: conftest.py
ttps/Active-Directory/1_Initial-Access/SoaPy/: Dockerfile  README.md  pyproject.toml
ttps/Active-Directory/1_Initial-Access/SoaPy/src/: adws.py  soa.py
ttps/Active-Directory/1_Initial-Access/SoaPy/tests/: test_nmf.py  test_records.py
ttps/Active-Directory/tools/scepreq/: README.md  pyproject.toml
ttps/Active-Directory/tools/scepreq/scepreq/: __init__.py  builders.py  client.py  cryptoutils.py  envelope.py  main.py  message.py  privatekey.py  publickey.py  responses.py  signingrequest.py
ttps/tools/bypass/RedirectThread/: CMakeLists.txt  README.md  RedirectThread.sln  compile.Dockerfile
ttps/tools/bypass/RedirectThread/AlertableThreadsForDays/: AlertableThreadsForDays.cpp  AlertableThreadsForDays.vcxproj  AlertableThreadsForDays.vcxproj.filters
ttps/tools/bypass/RedirectThread/ETWThreadCreationNoise/: FindRemoteThreadsETW.ps1
ttps/tools/bypass/RedirectThread/RedirectThread/: APCInjection.cpp  APCInjection.h  Arguments.cpp  Arguments.h  CreateRemoteThreadUtil h  CreateRemoteThreadUtil.cpp  DLLInjection.cpp  DLLInjection.h  GadgetUtil.cpp  GadgetUtil.h  Helpers.cpp  Helpers.h  Injection.cpp  Injection.h  NativeAPI.cpp  NativeAPI.h  NtCreateThreadUtil.cpp  NtCreateThreadUtil.h  ProcessThread.cpp  ProcessThread.h  RedirectThread.h  RedirectThread.vcxproj  RedirectThread.vcxproj.filters  main.cpp
ttps/tools/microsoft/waiting_thread_hijacking/: .appveyor.yml  CMakeLists.txt  README.md  common.h  hijacking.cpp  hijacking.h  main.cpp  main_split.cpp  ntddk.h  ntdll_api.h  shellcode.h  threads_util.cpp  threads_util.h
(+6969 files in other folders)
