[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scepreq"
version = "0.1.0"
description = "AD CS SCEP request tool"
requires-python = ">=3.6"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "requests",
  "cryptography",
  "oscrypto",
  "asn1crypto",
  "certbuilder",
  "csrbuilder"
]

[tool.setuptools.packages.find]
include = ["scepreq"]
  
[project.scripts]
scepreq = "scepreq.main:main"
