[package]
name = "link_obfuscator"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Networking_WinInet",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
] }

ntapi = "0.4.1"
base64 = "0.22.1"
rand = "0.9.1"

