[package]
name = "remote_mapping_injection"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = [
    "errhandlingapi",
    "handleapi",
    "memoryapi",
    "minwindef",
    "ntdef",
    "processthreadsapi",
    "synchapi",
    "tlhelp32",
    "winbase",
    "winnt"
]}
