[package]
edition = "2024"
name = "TartarusGate"
version = "0.1.0"

[dependencies]
windows = {version = "0.61.1", features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_System_Kernel",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Win32_System_SystemInformation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_WindowsProgramming",
]}


[build-dependencies]
cc = "1.2"
nasm-rs = "0.3"
