[package]
name = "direct_syscalls"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_syscalls = { git = "https://github.com/janoglezcampos/rust_syscalls", features = ["_DIRECT_"] }

winapi = { version = "0.3.9", features = [
    "winuser",
    "setupapi",
    "dbghelp",
    "wlanapi",
    "winnls",
    "wincon",
    "fileapi",
    "sysinfoapi",
    "fibersapi",
    "debugapi",
    "winerror",
    "wininet",
    "winhttp",
    "synchapi",
    "securitybaseapi",
    "wincrypt",
    "psapi",
    "tlhelp32",
    "heapapi",
    "shellapi",
    "memoryapi",
    "processthreadsapi",
    "errhandlingapi",
    "winbase",
    "handleapi",
    "synchapi",
] }
ntapi = "0.4.1"
