[package]
name = "indirect_syscalls"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["wtsapi32","winuser","setupapi","dbghelp","wlanapi","winnls","wincon","fileapi","sysinfoapi", "fibersapi","debugapi","winerror", "wininet" , "winhttp" ,"synchapi","securitybaseapi","wincrypt","psapi", "tlhelp32", "heapapi","shellapi", "memoryapi", "processthreadsapi", "errhandlingapi", "winbase", "handleapi", "synchapi"] }
ntapi = "0.4.1"
# Add the following for systemcall stub !
# rust_syscalls = {path = "..\rust_syscalls\\src", features = ["_INDIRECT_"]}

rust_syscalls = {path = "./rust_syscalls/", features = ["_INDIRECT_"]}
