[package]
edition = "2024"
name = "parallel_syscalls"
version = "0.1.0"

[dependencies]
ntapi = "0.4.1"
widestring = "1.2.0"
windows = {version = "0.61.1", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_IO",
  "Win32_Security",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_Kernel",
  "Win32_System_WindowsProgramming",
  "Wdk_Foundation",
]}

[features]
debug = []

